--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8085
-spring.application.name=springbootEs
+spring.application.name=sprinbootes
 
 # es测试地址， 按需修改
 esCallBackAddress: http://127.0.0.1:19200/emp/_doc/
@@ -21,7 +21,7 @@ spring.jackson.serialization.indent_output=true
 #swagger扫描包
 swagger2.swagger2BasePackage=com.thinkit.cloud.upm.controller
 #swagger标题
-swagger2.title=springbootEs service
+swagger2.title=sprinbootes service
 #swagger描述
 swagger2.description=upm service 
 #swager 版本
