--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -5,6 +5,6 @@ VOLUME /tmp
 RUN mkdir /app
 
 COPY /*.zip /app/
-cd /app
-unzip sprinbootes-0.0.1-SNAPSHOT-assembly
+RUN cd /app
+RUN unzip sprinbootes-0.0.1-SNAPSHOT-assembly
 ENTRYPOINT ["cd /app/sprinbootes-0.0.1-SNAPSHOT-assembly/sprinbootes-0.0.1-SNAPSHOT/bin && startup.sh"]
